compiler/typ/tests/fixtures/diagnostics/0454_modules_signature_arity_mismatch_04.ml
module Q : sig
  type 'a box
  val x : (int, bool) box
end = struct
  type 'a box = Box of 'a
  let x = Box 3
end
